fixed overflow hidden bug

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@ body {
   height: 100%;
   text-align: center;
   background-color: #fdb1bb;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 /* preloader */
 .folding-cube ul{
@@ -332,10 +333,6 @@ td {
 .main-canvas {
     margin: 10px;
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
-    /* position: fixed; */
-    /* left: 50%; */
-    /* top: 55%; */
-    /* transform: translate(-50%, -50%); */
     width: 75%;
     max-width: 550px;
     background-color: white;
@@ -399,17 +396,6 @@ td {
 
 /* CSS for the back button */
 
-.center-con {
-  position: relative;
-  display: flex;
-  height: 10vh;
-  width: 10vh;
-  align-items: flex-end;
-  justify-content: left;
-  margin: 550px 800px 20px 200px;
-  cursor: pointer;
-}
-
 .round {
   position: fixed;
   top:84%;
@@ -420,11 +406,11 @@ td {
   border-radius: 100%;
   padding-top: 8px;
   padding-left: 5px;
+  cursor: pointer;
 }
 
 #cta {
   width: 100%;
-  cursor: pointer;
   position: absolute;
 }
 
@@ -524,6 +510,8 @@ td {
   }
 }
 
+/* Colour palette styles */
+
 #palette {
   display: grid;
   height: 50vh;
@@ -535,9 +523,9 @@ td {
 }
 
 #palette-prompt {
+  font-family: 'Chewy', cursive;
   grid-column: span 3;
   font-size: 2rem;
-  font-weight: bold;
 }
 
 .color {
